packages/parser/tests/fixtures/grammar/negative/bad-comprehension.asfl
module SYSTEM_Bad;
process P ()
FSF :
others && { n | n: nat &
end_process
end_module
